2008-07-17  John W. Eaton  <jwe@octave.org>

	* general/fliplr.m: Fix usage test.
	* testfun/test.m: Fix usage tests.

2008-07-17  Jaroslav Hajek <highegg@gmail.com>

	* statistics/base/cov.m: Fix test that should no longer work.

2008-07-16  Michael Goffioul  <michael.goffioul@gmail.com>

	* plot/gcbo.m, plot/gcbf.m: New functions.
	* plot/Makefile.in (SOURCES): Add them to the list.

2008-07-16  John W. Eaton  <jwe@octave.org>

	* deprecated/loadimage.m: New file.
	* deprecated/Makefile.in (SOURCES): Add it to the list.
	* image/loadimage.m: Delete.	
	* image/Makefile.in (SOURCES): Remove it from the list.
	* image/imread.m: Incorporate loadimage functionality here.
	Simplify.
	* image/imshow.m: Call imread, not loadimage.

	* image/__img__.m: Set clim for true-color integer data.

	* image/imshow.m: Don't convert integer true-color data to double.

	* plot/__go_draw_axes__.m: Recognize 3-d cdata as a true-color image.

2008-07-14  John W. Eaton  <jwe@octave.org>

	* image/Makefile.in (SOURCES): Add imread.m to the list.

2008-07-14  Thomas L. Scofield  <scofield@calvin.edu>

	* image/imread.m: New file from Octave Forge.

2008-07-10  Jaroslav Hajek <highegg@gmail.com>

	* set/unique.m: Implement 'first' and 'last', some simplifications.
	* set/union.m: Implement output indices.
	* set/intersect.m: Implement 'rows'.
	* set/setdiff.m: Implement output indices.
	* set/setxor.m: Implement 'rows' and output indices.
	Add tests and adjust docs in all of the above.

2008-06-11  John W. Eaton  <jwe@octave.org>

	* set/ismember.m: Fix fail tests.

	* general/rat.m: Properly initialize steps when all elements of
	input array are integers.  Append spaces as necessary when
	building  character array.

2008-06-05  Jaroslav Hajek <highegg@gmail.com>

	* plot/__go_draw_axes__.m: Use fprintf for formatted output.

2008-06-04  Michael Goffioul  <michael.goffioul@gmail.com>

	* plot/__go_draw_axes__.m: Support hggroup objects.
	* plot/hggroup.m: New file.